syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message buyGold_toS {}

message buyGold_toC {}